# neurostrip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
slicer_plugin/: CMakeLists.txt  NeuroStrip.py  README.md
slicer_plugin/Resources/UI/: NeuroStrip.ui
src/neurostrip/: __init__.py  lib.py
tests/: test_lib.py
